add java 8 compatibility